refactor: 검색 기능 중 장르 부분을 매핑테이블과 연결하여 리팩토링